product_docs/docs/edb-postgres-ai/1.2/analytics/index.mdx
---
title: Analytics/Lakehouse
navTitle: Analytics
navigation:
  - quick_start
  - external_tables
  - tiered_tables
  - reference
description: Explore EDB Postgres® Analytics Accelerator with concepts, tutorials, and reference material for Lakehouse and tiered tables.
navRootedTo: /edb-postgres-ai
---


Use the **Analytics Accelerator** to explore the analytical capabilities built on EDB Postgres®. This accelerator helps you understand core concepts, explore key technologies such as EDB Postgres® Lakehouse, and learn how to implement analytics with EDB Hybrid Manager (HM).

We integrate modern data architectures and open standards with the reliability and flexibility of Postgres to help you unlock valuable insights.

## Navigating the analytics accelerator

The accelerator organizes content into four areas:

- **Conceptual foundations**
Build your understanding of analytics principles and EDB’s approach.

- **EDB core analytics technologies**
Learn about EDB solutions and technologies that power our analytics offerings.

- **Practical guidance and solutions**
Find use cases, persona-based guides, how-to articles, and tutorials.

- **Product-specific implementations**
Access documentation for how these analytics capabilities surface and are managed in EDB products, such as EDB Hybrid Manager.

## Conceptual foundations

Understand the principles and strategies behind modern data analytics and EDB’s approach.

- [Generic analytics concepts](learn/explained/generic-concepts.mdx)
Learn about data architectures (Data Warehouse, Data Lake, Lakehouse) and foundational technologies (columnar storage, vectorized engines, and others).

- [EDB analytics concepts](learn/explained/analytics-concepts.mdx)
Explore EDB’s vision for Postgres® analytics and how EDB leverages core technologies.

- [Explained: Analytics](learn/explained)
Review in-depth explanations of EDB analytical features, design choices, and advanced topics. *(Coming soon)*

## EDB core analytics technologies

Learn about EDB’s analytics technologies and how they extend Postgres®.

- [Lakehouse clusters (EDB Postgres Lakehouse overview)](lakehouse)
Review the EDB Postgres® Lakehouse solution and its components for enabling analytics on object storage.

- [Apache Iceberg® with EDB solutions](iceberg)
Understand how EDB solutions use Apache Iceberg® to manage large analytical datasets.

- [Delta Lake with EDB solutions](delta_lake)
Learn how EDB Postgres® interacts with Delta tables to enable reliable data lakes.

- [Tiered tables with EDB Postgres](tiered_tables)
Manage data across storage tiers using EDB Postgres Distributed (PGD) and Lakehouse capabilities to optimize cost and performance.

## Practical guidance and solutions

Apply EDB’s analytics capabilities to meet your needs.

- [Analytics for your role (persona-based guide)](learn/personas)
Follow learning paths for DBAs, DevOps engineers, data scientists, and application developers.


## Product-specific implementations

Review how EDB analytics concepts and technologies are implemented in EDB products.

- [HM Analytics Spoke (Analytics in EDB Hybrid Manager)](#)
Access documentation for analytics features in EDB Hybrid Manager. This includes HM Lakehouse clusters, using Iceberg, Delta, and tiered tables in HM, and HM-specific tutorials.

## Where to start

- Start with [Generic analytics concepts](learn/explained/generic-concepts.mdx) and [Lakehouse overview](lakehouse) to understand core ideas.
- Explore practical guidance when available.
- Use product-specific documentation when working with EDB Hybrid Manager.

Postgres Lakehouse is built using a number of technologies:

-   PostgreSQL
-   [Seafowl](https://seafowl.io/), an analytical database
-   [Apache Datafusion®](https://datafusion.apache.org/), the query engine used by Seafowl
-   [Delta Lake](https://delta.io) (and specifically [delta-rs](https://github.com/delta-io/delta-rs)),
for implementing the storage and retrieval layer of Delta Tables

### Level 100

The most important thing to understand about Postgres Lakehouse is that it
separates storage from compute. This design allows you to scale them independently,
which is ideal for analytical workloads where queries can be unpredictable and
spiky. You wouldn't want to keep a machine mostly idle just to hold data on
its attached hard drives. Instead, you can keep data in object storage (and also
in highly compressible formats), and only provision the compute needed to query
it when necessary.

[![Level 100 Architecture](images/level-100.svg)](images/level-100.svg)

On the compute side, a vectorized query engine is optimized to query Lakehouse
tables but still fall back to Postgres for full compatibility.

On the storage side, Lakehouse tables are stored using highly compressible
columnar storage formats optimized for analytics.

### Level 200

Here's a slightly more comprehensive diagram of how these services fit together:

[![Level 200 Architecture](images/level-200.svg)](images/level-200.svg)

### Level 300

Here's the more detailed, zoomed-in view of "what's in the box":

[![Level 300 Architecture](images/level-300.svg)](images/level-300.svg)
