product_docs/docs/edb-postgres-ai/1.3/analytics/index.mdx
---
title: Analytics/Lakehouse
navTitle: Analytics
navRootedTo: /edb-postgres-ai
description: Explore EDB Postgres® Analytics Accelerator with concepts, tutorials, and reference material for Lakehouse and tiered tables.
redirects:
- /purl/analytics
navigation:
- "#Getting Started"
- generic-concepts
- analytics-concepts
- architecture
- getting-setup
- quick_start
- "#Use Anywhere"
- analytics-concepts
- terminology
- lakehouse
- iceberg
- delta_lake
- reference
- "#Use With PGD"
- tiered_tables
- offload-pgd-to-iceberg
- monitor-tiered-tables
- "#Learning"
- learn
- paths
- "101"
- "201"
- "301"
- personas
- "#How-To Hybrid Manager"
- create-lakehouse-cluster
- "#How-To Playbooks"
- how-to-read-write-without-catalog
- how-to-iceberg-read-writes-with-catalog
- how-to-third-party-catalog
- how-to-lakehouse-read-with-without-catalog


---
Terminology: Hybrid Manager (HM) is EDB’s control plane for provisioning and operating Postgres, analytics, and AI across environments. Analytics Accelerator (PGAA) refers to EDB’s analytics capabilities that extend Postgres with lakehouse, tiering, and vectorized query features.


Use the **Analytics Accelerator (PGAA)** to explore the analytical capabilities built on EDB Postgres®. This accelerator helps you understand core concepts, explore key technologies such as EDB Postgres® Lakehouse, and learn how to implement analytics with EDB Hybrid Manager (HM).

We integrate modern data architectures and open standards with the reliability and flexibility of Postgres to help you unlock valuable insights.

## Navigating the analytics accelerator

The accelerator organizes content into four areas:

- **Conceptual foundations**
Build your understanding of analytics principles and EDB’s approach.

- **EDB core analytics technologies**
Learn about EDB solutions and technologies that power our analytics offerings.

- **Practical guidance and solutions**
Find use cases, persona-based guides, how-to articles, and tutorials.

- **Product-specific implementations**
Access documentation for how these analytics capabilities surface and are managed in EDB products, such as EDB Hybrid Manager.

## Conceptual foundations

Understand the principles and strategies behind modern data analytics and EDB’s approach.

- [Generic analytics concepts](/edb-postgres-ai/1.3/analytics/generic-concepts)
Learn about data architectures (Data Warehouse, Data Lake, Lakehouse) and foundational technologies (columnar storage, vectorized engines, and others).

- [EDB analytics concepts](/edb-postgres-ai/1.3/analytics/analytics-concepts)
Explore EDB’s vision for Postgres® analytics and how EDB leverages core technologies.

Review in-depth explanations of EDB analytical features, design choices, and advanced topics across the sections below.

## EDB core analytics technologies

Learn about EDB’s analytics technologies and how they extend Postgres®.

- [Lakehouse clusters (EDB Postgres Lakehouse overview)](/edb-postgres-ai/1.3/analytics/lakehouse)
Review the EDB Postgres® Lakehouse solution and its components for enabling analytics on object storage.

- [Apache Iceberg with EDB solutions](/edb-postgres-ai/1.3/analytics/iceberg)
Understand how EDB solutions use Apache Iceberg to manage large analytical datasets.

- [Delta Lake with EDB solutions](/edb-postgres-ai/1.3/analytics/delta_lake)
Learn how EDB Postgres® interacts with Delta tables to enable reliable data lakes.

- [Tiered tables with EDB Postgres](/edb-postgres-ai/1.3/analytics/tiered_tables)
Manage data across storage tiers using EDB Postgres Distributed (PGD) and Lakehouse capabilities to optimize cost and performance.

## Use Anywhere (Manual/Reference)

- Lakehouse overview: [Lakehouse clusters](/edb-postgres-ai/1.3/analytics/lakehouse)
- Open formats: [Apache Iceberg](/edb-postgres-ai/1.3/analytics/iceberg), [Delta Lake](/edb-postgres-ai/1.3/analytics/delta_lake)
- Storage locations: see [Reference](/edb-postgres-ai/1.3/analytics/reference/index.mdx) for functions and configuration
- Reference: [Functions](/edb-postgres-ai/1.3/analytics/reference/functions.mdx), [PGAA functions](/edb-postgres-ai/1.3/analytics/reference/pgaa_functions.mdx), [Direct scan](/edb-postgres-ai/1.3/analytics/reference/directscan.mdx), [Datasets](/edb-postgres-ai/1.3/analytics/reference/datasets.mdx)

## Use With PGD (Manual/Reference)

- Concepts: [Tiered Tables](/edb-postgres-ai/1.3/analytics/tiered_tables)

## Use In Hybrid Manager (Manual/Reference)

- Getting ready: [Getting setup](/edb-postgres-ai/1.3/analytics/getting-setup.mdx)
- Provision: [Create a Lakehouse cluster](/edb-postgres-ai/1.3/analytics/create-lakehouse-cluster.mdx)
- Catalogs: [Configure an Iceberg catalog connection](/edb-postgres-ai/1.3/analytics/how-to-iceberg-reads-writes-with-catalog)
- Interop: [Read with or without a catalog](/edb-postgres-ai/1.3/analytics/how-to-lakehouse-read-with-without-catalog)

## How-Tos (Runbook-Aligned)

These guides mirror the runbook flows and code examples.

— Core How-Tos
- How-to  [Read with/without a catalog](/edb-postgres-ai/1.3/analytics/how-to-lakehouse-read-with-without-catalog)
- How-to  [Read/write without a catalog](/edb-postgres-ai/1.3/analytics/how-to-read-write-without-catalog)
- How-to  [Reads/writes with a catalog](/edb-postgres-ai/1.3/analytics/how-to-iceberg-reads-writes-with-catalog)
- How-to  [Integrate a third-party catalog](/edb-postgres-ai/1.3/analytics/how-to-third-party-catalog)


## Where to start

- Start with [Generic analytics concepts](/edb-postgres-ai/1.3/analytics/generic-concepts) and [Lakehouse overview](/edb-postgres-ai/1.3/analytics/lakehouse) to understand core ideas.
- If you’re experimenting with external data, use the No Catalog how-tos.
- If you’re integrating with PGD/Tiered Tables or catalogs, follow the PGD and Catalog how-tos.

Postgres Lakehouse is built using a number of technologies:

-   PostgreSQL
-   [Seafowl](https://seafowl.io/), an analytical database
-   [Apache DataFusion](https://datafusion.apache.org/), the query engine used by Seafowl
-   [Delta Lake](https://delta.io) (and specifically [delta-rs](https://github.com/delta-io/delta-rs)),
for implementing the storage and retrieval layer of Delta Tables

### Level 100

The most important thing to understand about Postgres Lakehouse is that it
separates storage from compute. This design allows you to scale them independently,
which is ideal for analytical workloads where queries can be unpredictable and
spiky. You wouldn't want to keep a machine mostly idle just to hold data on
its attached hard drives. Instead, you can keep data in object storage (and also
in highly compressible formats), and only provision the compute needed to query
it when necessary.

[![Level 100 Architecture](images/level-100.svg)](images/level-100.svg)

On the compute side, a vectorized query engine is optimized to query Lakehouse
tables but still fall back to Postgres for full compatibility.

On the storage side, Lakehouse tables are stored using highly compressible
columnar storage formats optimized for analytics.

### Level 200

Here's a slightly more comprehensive diagram of how these services fit together:

[![Level 200 Architecture](images/level-200.svg)](images/level-200.svg)

### Level 300

Here's the more detailed, zoomed-in view of "what's in the box":

[![Level 300 Architecture](images/level-300.svg)](images/level-300.svg)
